@startuml

title __V3's Class Diagram__\n

  namespace com.itbird.design {
    namespace adapter {
      namespace listview.v3 {
        interface com.itbird.design.adapter.listview.v3.BaseAdapterV3 {
            {abstract} + getCount()
            {abstract} + getItemView()
            {abstract} + notifySetChanged()
            {abstract} + registerObserver()
            {abstract} + unregisterAll()
            {abstract} + unregisterObserver()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace adapter {
      namespace listview.v3 {
        class com.itbird.design.adapter.listview.v3.ItbirdListViewV3 {
            ~ linearLayout : LinearLayout
            ~ mContext : Context
            + ItbirdListViewV3()
            + ItbirdListViewV3()
            + ItbirdListViewV3()
            + ItbirdListViewV3()
            + addView()
            + init()
            + setAdapter()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace adapter {
      namespace listview.v3 {
        class com.itbird.design.adapter.listview.v3.ItbirdListViewV3.AdapteDataSetObserver {
            + onChanged()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace adapter {
      namespace listview.v3 {
        class com.itbird.design.adapter.listview.v3.ListAdapterV3 {
            ~ data : List<String>
            ~ dataSetObservable : DataSetObservable
            ~ mContext : Context
            + ListAdapterV3()
            + getCount()
            + getItemView()
            + notifySetChanged()
            + registerObserver()
            + setData()
            + unregisterAll()
            + unregisterObserver()
        }
      }
    }
  }
  

  com.itbird.design.adapter.listview.v3.ItbirdListViewV3 -up-|> android.widget.ScrollView
  com.itbird.design.adapter.listview.v3.ItbirdListViewV3 o-- com.itbird.design.adapter.listview.v3.BaseAdapterV3 : mAdapter
  com.itbird.design.adapter.listview.v3.ItbirdListViewV3 +-down- com.itbird.design.adapter.listview.v3.ItbirdListViewV3.AdapteDataSetObserver
  com.itbird.design.adapter.listview.v3.ItbirdListViewV3.AdapteDataSetObserver -up-|> android.database.DataSetObserver
  com.itbird.design.adapter.listview.v3.ListAdapterV3 .up.|> com.itbird.design.adapter.listview.v3.BaseAdapterV3


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
